fix: Update package.json and package-lock.json to correct project name and dependencies

--- a/api/package.json
+++ b/api/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "dsa-api",
+  "name": "api",
   "version": "1.0.0",
-  "description": "API for DSA repository tracker",
+  "description": "",
+  "license": "ISC",
+  "author": "",
   "type": "module",
   "main": "index.js",
-  "dependencies": {
-    "express": "^4.21.2"
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
-  "engines": {
-    "node": ">=14.x"
+  "dependencies": {
+    "express": "^5.1.0"
   }
 }
